src/zenoh_dart.h

/// Performs a get query on the given selector.
///
/// Replies are posted to the Dart isolate via the given native port.
///
/// @param session        Const pointer to a loaned session (as uint8_t*).
/// @param selector       Null-terminated selector string.
/// @param port           The Dart native port to post replies to.
/// @param target         Query target (0=bestMatching, 1=all, 2=allComplete).
/// @param consolidation  Consolidation mode (-1=auto, 0=none, 1=monotonic, 2=latest).
/// @param payload        Pointer to z_owned_bytes_t (NULL = no payload).
///                       Consumed via z_bytes_move if non-NULL.
/// @param encoding       MIME type string (NULL = default).
/// @param timeout_ms     Timeout in milliseconds.
/// @param parameters     Additional query parameters (NULL = none).
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int8_t zd_get(
    const uint8_t* session,
    const char* selector,
    int64_t port,
    int8_t target,
    int8_t consolidation,
    uint8_t* payload,
    const char* encoding,
    uint64_t timeout_ms,
    const char* parameters);
/// Declares a liveliness subscriber on the given key expression.
///
/// Reuses the same z_owned_subscriber_t type and _zd_sample_callback/drop
/// as the regular subscriber. Samples are posted to the Dart NativePort.
///
/// @param subscriber_out  Pointer to an uninitialized z_owned_subscriber_t (as uint8_t*).
/// @param session         Const pointer to a loaned session (as uint8_t*).
/// @param key_expr        Null-terminated key expression string.
/// @param port            Dart NativePort for sample callbacks.
/// @param history         Boolean (0=false, 1=true) for receiving pre-existing token state.
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int8_t zd_liveliness_declare_subscriber(
    uint8_t* subscriber_out, const uint8_t* session,
    const char* key_expr, int64_t port, int8_t history);
/// Queries liveliness tokens matching the given key expression.
///
/// Replies are posted to the Dart NativePort as arrays (same format as
/// zd_get replies). A null sentinel signals completion.
///
/// @param session   Loaned session pointer.
/// @param key_expr  Key expression to query liveliness for.
/// @param port      Dart NativePort for reply callbacks.
/// @param timeout_ms  Timeout in milliseconds (0 = default).
/// @return 0 on success.
FFI_PLUGIN_EXPORT int8_t zd_liveliness_get(
    const uint8_t* session, const char* key_expr,
    int64_t port, uint64_t timeout_ms);
// ---------------------------------------------------------------------------
// Serializer
// ---------------------------------------------------------------------------

/// Returns the size of ze_owned_serializer_t in bytes.
FFI_PLUGIN_EXPORT size_t zd_serializer_sizeof(void);
/// Initializes an empty serializer.
///
/// @param ser  Pointer to an uninitialized ze_owned_serializer_t.
/// @return 0 on success.
FFI_PLUGIN_EXPORT int8_t zd_serializer_empty(ze_owned_serializer_t* ser);
/// Obtains a mutable loaned reference to the owned serializer.
///
/// @param ser  Pointer to a valid ze_owned_serializer_t.
/// @param out  Receives the mutable loaned pointer.
FFI_PLUGIN_EXPORT void zd_serializer_loan_mut(
    ze_owned_serializer_t* ser, ze_loaned_serializer_t** out);
/// Finishes the serializer and produces a z_owned_bytes_t.
///
/// The serializer is consumed (moved) by this call.
///
/// @param ser  Pointer to a valid ze_owned_serializer_t (consumed).
/// @param out  Receives the produced z_owned_bytes_t.
FFI_PLUGIN_EXPORT void zd_serializer_finish(
    ze_owned_serializer_t* ser, z_owned_bytes_t* out);
/// Drops (frees) an owned serializer.
///
/// After this call the owned serializer is in gravestone state.
///
/// @param ser  Pointer to a ze_owned_serializer_t to drop.
FFI_PLUGIN_EXPORT void zd_serializer_drop(ze_owned_serializer_t* ser);
// ---------------------------------------------------------------------------
// Serializer — arithmetic type serialization
// ---------------------------------------------------------------------------

/// Serializes a uint8_t value.
FFI_PLUGIN_EXPORT int8_t zd_serializer_serialize_uint8(
    ze_loaned_serializer_t* ser, uint8_t val);
/// Serializes a uint16_t value.
FFI_PLUGIN_EXPORT int8_t zd_serializer_serialize_uint16(
    ze_loaned_serializer_t* ser, uint16_t val);
/// Serializes a uint32_t value.
FFI_PLUGIN_EXPORT int8_t zd_serializer_serialize_uint32(
    ze_loaned_serializer_t* ser, uint32_t val);
/// Serializes a uint64_t value.
FFI_PLUGIN_EXPORT int8_t zd_serializer_serialize_uint64(
    ze_loaned_serializer_t* ser, uint64_t val);
/// Serializes an int8_t value.
FFI_PLUGIN_EXPORT int8_t zd_serializer_serialize_int8(
    ze_loaned_serializer_t* ser, int8_t val);
/// Serializes an int16_t value.
FFI_PLUGIN_EXPORT int8_t zd_serializer_serialize_int16(
    ze_loaned_serializer_t* ser, int16_t val);
/// Serializes an int32_t value.
FFI_PLUGIN_EXPORT int8_t zd_serializer_serialize_int32(
    ze_loaned_serializer_t* ser, int32_t val);
/// Serializes an int64_t value.
FFI_PLUGIN_EXPORT int8_t zd_serializer_serialize_int64(
    ze_loaned_serializer_t* ser, int64_t val);
/// Serializes a float value.
FFI_PLUGIN_EXPORT int8_t zd_serializer_serialize_float(
    ze_loaned_serializer_t* ser, float val);
/// Serializes a double value.
FFI_PLUGIN_EXPORT int8_t zd_serializer_serialize_double(
    ze_loaned_serializer_t* ser, double val);
/// Serializes a bool value.
FFI_PLUGIN_EXPORT int8_t zd_serializer_serialize_bool(
    ze_loaned_serializer_t* ser, bool val);
// ---------------------------------------------------------------------------
// Serializer — compound type serialization
// ---------------------------------------------------------------------------

/// Serializes a null-terminated UTF-8 string.
FFI_PLUGIN_EXPORT int8_t zd_serializer_serialize_string(
    ze_loaned_serializer_t* ser, const char* val);