package/lib/src/bindings.dart


  late final _zd_liveliness_declare_subscriberPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Char>,
            ffi.Int64,
            ffi.Int8,
          )
        >
      >('zd_liveliness_declare_subscriber');
  late final _zd_liveliness_declare_subscriber =
      _zd_liveliness_declare_subscriberPtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Char>,
              int,
              int,
            )
          >();

  /// Queries liveliness tokens matching the given key expression.
  ///
  /// Replies are posted to the Dart NativePort as arrays (same format as
  /// zd_get replies). A null sentinel signals completion.
  ///
  /// @param session   Loaned session pointer.
  /// @param key_expr  Key expression to query liveliness for.
  /// @param port      Dart NativePort for reply callbacks.
  /// @param timeout_ms  Timeout in milliseconds (0 = default).
  /// @return 0 on success.
  int zd_liveliness_get(
    ffi.Pointer<ffi.Uint8> session,
    ffi.Pointer<ffi.Char> key_expr,
    int port,
    int timeout_ms,
  ) {
    return _zd_liveliness_get(session, key_expr, port, timeout_ms);
  }

  late final _zd_liveliness_getPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Char>,
            ffi.Int64,
            ffi.Uint64,
          )
        >
      >('zd_liveliness_get');
  late final _zd_liveliness_get = _zd_liveliness_getPtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Char>, int, int)
      >();

  /// Returns the size of ze_owned_serializer_t in bytes.
  int zd_serializer_sizeof() {
    return _zd_serializer_sizeof();
  }

  late final _zd_serializer_sizeofPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function()>>('zd_serializer_sizeof');
  late final _zd_serializer_sizeof = _zd_serializer_sizeofPtr
      .asFunction<int Function()>();

  /// Initializes an empty serializer.
  ///
  /// @param ser  Pointer to an uninitialized ze_owned_serializer_t.
  /// @return 0 on success.
  int zd_serializer_empty(ffi.Pointer<ze_owned_serializer_t> ser) {
    return _zd_serializer_empty(ser);
  }

  late final _zd_serializer_emptyPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ze_owned_serializer_t>)
        >
      >('zd_serializer_empty');
  late final _zd_serializer_empty = _zd_serializer_emptyPtr
      .asFunction<int Function(ffi.Pointer<ze_owned_serializer_t>)>();

  /// Obtains a mutable loaned reference to the owned serializer.
  ///
  /// @param ser  Pointer to a valid ze_owned_serializer_t.
  /// @param out  Receives the mutable loaned pointer.
  void zd_serializer_loan_mut(
    ffi.Pointer<ze_owned_serializer_t> ser,
    ffi.Pointer<ffi.Pointer<ze_loaned_serializer_t>> out,
  ) {
    return _zd_serializer_loan_mut(ser, out);
  }

  late final _zd_serializer_loan_mutPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ze_owned_serializer_t>,
            ffi.Pointer<ffi.Pointer<ze_loaned_serializer_t>>,
          )
        >
      >('zd_serializer_loan_mut');
  late final _zd_serializer_loan_mut = _zd_serializer_loan_mutPtr
      .asFunction<
        void Function(
          ffi.Pointer<ze_owned_serializer_t>,
          ffi.Pointer<ffi.Pointer<ze_loaned_serializer_t>>,
        )
      >();

  /// Finishes the serializer and produces a z_owned_bytes_t.
  ///
  /// The serializer is consumed (moved) by this call.
  ///
  /// @param ser  Pointer to a valid ze_owned_serializer_t (consumed).
  /// @param out  Receives the produced z_owned_bytes_t.
  void zd_serializer_finish(
    ffi.Pointer<ze_owned_serializer_t> ser,
    ffi.Pointer<ffi.Opaque> out,
  ) {
    return _zd_serializer_finish(ser, out);
  }

  late final _zd_serializer_finishPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ze_owned_serializer_t>,
            ffi.Pointer<ffi.Opaque>,
          )
        >
      >('zd_serializer_finish');
  late final _zd_serializer_finish = _zd_serializer_finishPtr
      .asFunction<
        void Function(
          ffi.Pointer<ze_owned_serializer_t>,
          ffi.Pointer<ffi.Opaque>,
        )
      >();

  /// Drops (frees) an owned serializer.
  ///
  /// After this call the owned serializer is in gravestone state.
  ///
  /// @param ser  Pointer to a ze_owned_serializer_t to drop.
  void zd_serializer_drop(ffi.Pointer<ze_owned_serializer_t> ser) {
    return _zd_serializer_drop(ser);
  }

  late final _zd_serializer_dropPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ze_owned_serializer_t>)
        >
      >('zd_serializer_drop');
  late final _zd_serializer_drop = _zd_serializer_dropPtr
      .asFunction<void Function(ffi.Pointer<ze_owned_serializer_t>)>();

  /// Serializes a uint8_t value.
  int zd_serializer_serialize_uint8(
    ffi.Pointer<ze_loaned_serializer_t> ser,
    int val,
  ) {
    return _zd_serializer_serialize_uint8(ser, val);
  }

  late final _zd_serializer_serialize_uint8Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ze_loaned_serializer_t>, ffi.Uint8)
        >
      >('zd_serializer_serialize_uint8');
  late final _zd_serializer_serialize_uint8 = _zd_serializer_serialize_uint8Ptr
      .asFunction<int Function(ffi.Pointer<ze_loaned_serializer_t>, int)>();

  /// Serializes a uint16_t value.
  int zd_serializer_serialize_uint16(
    ffi.Pointer<ze_loaned_serializer_t> ser,
    int val,
  ) {
    return _zd_serializer_serialize_uint16(ser, val);
  }

  late final _zd_serializer_serialize_uint16Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ze_loaned_serializer_t>, ffi.Uint16)
        >
      >('zd_serializer_serialize_uint16');
  late final _zd_serializer_serialize_uint16 =
      _zd_serializer_serialize_uint16Ptr
          .asFunction<int Function(ffi.Pointer<ze_loaned_serializer_t>, int)>();

  /// Serializes a uint32_t value.
  int zd_serializer_serialize_uint32(
    ffi.Pointer<ze_loaned_serializer_t> ser,
    int val,
  ) {
    return _zd_serializer_serialize_uint32(ser, val);
  }

  late final _zd_serializer_serialize_uint32Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ze_loaned_serializer_t>, ffi.Uint32)
        >
      >('zd_serializer_serialize_uint32');
  late final _zd_serializer_serialize_uint32 =
      _zd_serializer_serialize_uint32Ptr
          .asFunction<int Function(ffi.Pointer<ze_loaned_serializer_t>, int)>();

  /// Serializes a uint64_t value.
  int zd_serializer_serialize_uint64(
    ffi.Pointer<ze_loaned_serializer_t> ser,
    int val,
  ) {
    return _zd_serializer_serialize_uint64(ser, val);
  }

  late final _zd_serializer_serialize_uint64Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ze_loaned_serializer_t>, ffi.Uint64)
        >
      >('zd_serializer_serialize_uint64');
  late final _zd_serializer_serialize_uint64 =
      _zd_serializer_serialize_uint64Ptr
          .asFunction<int Function(ffi.Pointer<ze_loaned_serializer_t>, int)>();

  /// Serializes an int8_t value.
  int zd_serializer_serialize_int8(
    ffi.Pointer<ze_loaned_serializer_t> ser,
    int val,
  ) {
    return _zd_serializer_serialize_int8(ser, val);
  }

  late final _zd_serializer_serialize_int8Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ze_loaned_serializer_t>, ffi.Int8)
        >
      >('zd_serializer_serialize_int8');
  late final _zd_serializer_serialize_int8 = _zd_serializer_serialize_int8Ptr
      .asFunction<int Function(ffi.Pointer<ze_loaned_serializer_t>, int)>();

  /// Serializes an int16_t value.
  int zd_serializer_serialize_int16(
    ffi.Pointer<ze_loaned_serializer_t> ser,
    int val,
  ) {
    return _zd_serializer_serialize_int16(ser, val);
  }

  late final _zd_serializer_serialize_int16Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ze_loaned_serializer_t>, ffi.Int16)
        >
      >('zd_serializer_serialize_int16');
  late final _zd_serializer_serialize_int16 = _zd_serializer_serialize_int16Ptr
      .asFunction<int Function(ffi.Pointer<ze_loaned_serializer_t>, int)>();

  /// Serializes an int32_t value.
  int zd_serializer_serialize_int32(
    ffi.Pointer<ze_loaned_serializer_t> ser,
    int val,
  ) {
    return _zd_serializer_serialize_int32(ser, val);
  }

  late final _zd_serializer_serialize_int32Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ze_loaned_serializer_t>, ffi.Int32)
        >
      >('zd_serializer_serialize_int32');
  late final _zd_serializer_serialize_int32 = _zd_serializer_serialize_int32Ptr
      .asFunction<int Function(ffi.Pointer<ze_loaned_serializer_t>, int)>();

  /// Serializes an int64_t value.
  int zd_serializer_serialize_int64(
    ffi.Pointer<ze_loaned_serializer_t> ser,
    int val,
  ) {
    return _zd_serializer_serialize_int64(ser, val);
  }

  late final _zd_serializer_serialize_int64Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ze_loaned_serializer_t>, ffi.Int64)
        >
      >('zd_serializer_serialize_int64');
  late final _zd_serializer_serialize_int64 = _zd_serializer_serialize_int64Ptr
      .asFunction<int Function(ffi.Pointer<ze_loaned_serializer_t>, int)>();

  /// Serializes a float value.
  int zd_serializer_serialize_float(
    ffi.Pointer<ze_loaned_serializer_t> ser,
    double val,
  ) {
    return _zd_serializer_serialize_float(ser, val);
  }

  late final _zd_serializer_serialize_floatPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ze_loaned_serializer_t>, ffi.Float)
        >
      >('zd_serializer_serialize_float');
  late final _zd_serializer_serialize_float = _zd_serializer_serialize_floatPtr
      .asFunction<int Function(ffi.Pointer<ze_loaned_serializer_t>, double)>();

  /// Serializes a double value.
  int zd_serializer_serialize_double(
    ffi.Pointer<ze_loaned_serializer_t> ser,
    double val,
  ) {
    return _zd_serializer_serialize_double(ser, val);
  }

  late final _zd_serializer_serialize_doublePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ze_loaned_serializer_t>, ffi.Double)
        >
      >('zd_serializer_serialize_double');
  late final _zd_serializer_serialize_double =
      _zd_serializer_serialize_doublePtr
          .asFunction<
            int Function(ffi.Pointer<ze_loaned_serializer_t>, double)
          >();

  /// Serializes a bool value.
  int zd_serializer_serialize_bool(
    ffi.Pointer<ze_loaned_serializer_t> ser,
    bool val,
  ) {
    return _zd_serializer_serialize_bool(ser, val);
  }

  late final _zd_serializer_serialize_boolPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ze_loaned_serializer_t>, ffi.Bool)
        >
      >('zd_serializer_serialize_bool');
  late final _zd_serializer_serialize_bool = _zd_serializer_serialize_boolPtr
      .asFunction<int Function(ffi.Pointer<ze_loaned_serializer_t>, bool)>();

  /// Serializes a null-terminated UTF-8 string.
  int zd_serializer_serialize_string(
    ffi.Pointer<ze_loaned_serializer_t> ser,
    ffi.Pointer<ffi.Char> val,
  ) {
    return _zd_serializer_serialize_string(ser, val);
  }
